fix: fix horizontal overflow for Footer

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,15 +28,15 @@ body {
     margin: 0;
 }
 
-html,
-body {
-    overflow-x: hidden;
-}
-
 .container {
     max-width: var(--max-width);
     padding-inline: var(--gutter);
     margin-inline: auto;
+}
+
+.overflow-guard {
+    overflow-x: hidden;
+    width: 100%;
 }
 
 .heading {
